--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build && node dist/index.js",
+    "postinstall": "tsc",
     "tsc": "tsc",
     "build": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1",
