Added PreInstall script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "preinstall": "npm install tsc",
     "start": "npm run build && node dist/index.js",
     "postinstall": "tsc",
     "tsc": "tsc",
