--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "rimraf ./dist tsc",
     "start": "npm run build && node dist/index.js",
-    "postinstall": "tsc",
-    "tsc": "tsc",
-    "build": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only --exit-child --watch src src/index.ts"
   },
